# Limitlit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Roadmap.md  Vision.md
engine/graphics/: BitmapFont.cpp  Color.hpp  Framebuffer.cpp  Framebuffer.hpp
engine/math/: Vec3.cpp
engine/render/: RayTracer.cpp
include/limitlit/: Application.hpp  Renderer.hpp  Window.hpp
include/limitlit/graphics/: BitmapFont.hpp  Color.hpp  Framebuffer.hpp
include/limitlit/input/: MouseState.hpp
include/limitlit/math/: Vec3.hpp
include/limitlit/render/: Ray.hpp  RayTracer.hpp
include/limitlit/ui/: ClassicUI.hpp
src/: Application.cpp  Renderer.cpp  Window.cpp  main.cpp
ui/: ClassicUI.cpp
